static/css/style.css
/* Site wide styles */

body {
    font-family: Yaldevi, sans-serif;
    background-color: #fffde7;
}

h1 {
    font-size: 3rem;
}

h2 {
    font-size: 2rem;
}

.card-image {
    height: 100%;
    overflow: hidden;
  }
  
.card-image img {
        width: 100%;
        height: 100%;
        aspect-ratio: 1/1;
  }

/* all_recipes styles */

.search-recipes {
    min-height: 30vh;
    margin-top: 1.5rem;
    background-image: url(https://images.pexels.com/photos/301378/pexels-photo-301378.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
}

/* recipe styles */

.recipe-image {
    max-width: 100%;
}

.recipe-info {
    font-size: 1.5rem;
}

/* add_recipe styles */

#inputIngredientRow, #inputInstructionRow {
    display: inline-flex;
    flex-direction: row;
    align-items: center;
}

